--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,16 +47,15 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    implementation "com.squareup.moshi:moshi:1.9.3"
-    implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
-
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.github.haroldadmin:NetworkResponseAdapter:4.2.2"
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
@@ -66,6 +65,12 @@ dependencies {
     kapt "androidx.room:room-compiler:2.3.0"
 
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
+
+    // Dependency Injection - Koin
+    implementation 'org.koin:koin-android:2.2.1'
+    implementation 'org.koin:koin-androidx-scope:2.2.1'
+    implementation 'org.koin:koin-androidx-viewmodel:2.2.1'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
