--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,13 +64,13 @@ dependencies {
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
 
-    implementation "android.arch.work:work-runtime-ktx:1.0.1"
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+    androidTestImplementation "androidx.work:work-testing:2.7.1"
 
     // Dependency Injection - Koin
     implementation 'org.koin:koin-android:2.2.1'
     implementation 'org.koin:koin-androidx-scope:2.2.1'
     implementation 'org.koin:koin-androidx-viewmodel:2.2.1'
-
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
